added websocket and live result
